just updated my portfolio

--- a/index.html
+++ b/index.html
@@ -96,11 +96,8 @@
                             <div class="about-text">
                                 <p>
                                     Results-oriented Cloud Security and DevOps Engineer with 2 years of experience in architecting, implementing, and managing secure and high-performing cloud infrastructure. Skilled in automating infrastructure provisioning, configuration management, and CI/CD pipelines. Proven ability to identify and mitigate security risks, conduct vulnerability assessments, and implement security best practices. Collaborate effectively with cross-functional teams to optimize cloud solutions, reduce downtime, and enhance overall system reliability.
-
-Additional Tips:
                                 </p>
                             </div>
-                            <div class="skills">
                                 <div class="skill-name">
                                     <p>Infrastructure Security</p>
                                 </div>
@@ -109,6 +106,7 @@ Additional Tips:
                                 </div>
                                 <div class="skill-name">
                                     <p>Threat Detection and Response</p>
+                                </div>
                                 <div class="skill-name">
                                     <p>Infrastructure Automation</p>
                                 </div>
@@ -117,11 +115,11 @@ Additional Tips:
                                 </div>
                                 <div class="skill-name">
                                     <p>Continuous Integration and Continuous Delivery (CI/CD)</p>
-                                </div><div class="skill-name">
+                                </div>
+                                <div class="skill-name">
                                     <p>Web Deployment</p>
                                 </div>
                             </div>
-                            <a class="btn" href="">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -185,21 +183,18 @@ Additional Tips:
                                 <h3>Infrastructure Automation</h3>
                                 <p>
                                     Automating the provisioning and configuration of cloud resources using tools like Terraform and Ansible, Managing infrastructure as code (IaC) to ensure consistency and repeatability
-
                                 </p>
                             </div>
                             <div class="service-text">
                                 <h3>Monitoring and Logging</h3>
                                 <p>
                                     Implementing monitoring tools to track system performance and identify potential issues, Configuring logging solutions to collect and analyze system logs for security insights
-
                                 </p>
                             </div>
                             <div class="service-text">
                                 <h3>Continuous Integration and Continuous Delivery (CI/CD)</h3>
                                 <p>
                                     Setting up CI/CD pipelines to automate the build, test, and deployment processes, Integrating security testing tools into the CI/CD pipeline to ensure security is built in
-
                                 </p>
                             </div>
                         </div>
@@ -376,11 +371,10 @@ Additional Tips:
                             <p>admin@teachtek.online</p>
                         </div>
                         <div class="footer-social">
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-youtube"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://x.com/Anie_Uzo?t=aZ_44ZH-ib2cvoxg8RRqAA&s=08" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/share/1B6tDK3bg3/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/stephanieuzoka/profilecard/?igsh=dzZpa3F6Y3kzczI0" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/stephanie-uzoka?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
